--- a/ui/css/visual.css
+++ b/ui/css/visual.css
@@ -129,13 +129,14 @@ html, body, form{overflow-y:auto;height:100%;}
 .visual_rightCon {
     width: 100%;
     display: flex;
-    flex-direction: column;
-    gap: 18px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10px;
     margin: 18px 0 0 0;
 }
 .visual_rightCon_box {
-    width: 100%;
-    height: 64px; /* 与visual_conTop_box一致 */
+    width: 48%;
+    height: 82px; /* 与visual_conTop_box一致 */
     background: url(../images/ksh40.png) no-repeat;
     background-size: 100% 100%;
     border-radius: 8px;
@@ -143,6 +144,7 @@ html, body, form{overflow-y:auto;height:100%;}
     align-items: center;
     justify-content: center;
     padding: 0 3px;
+    box-sizing: border-box;
 }
 .visual_rightCon_box > div {
     width: 100%;
@@ -153,7 +155,7 @@ html, body, form{overflow-y:auto;height:100%;}
 }
 .visual_rightCon_box h3 {
     color: #fff;
-    font-size: 12px;
+    font-size: 10px;
     padding: 8px 0 0 20px; /* 与visual_conTop_box一致 */
     margin: 0;
 }
@@ -162,7 +164,7 @@ html, body, form{overflow-y:auto;height:100%;}
     line-height: 12x;
     color: #20dbfd;
     text-shadow: 0 0 25px #00d8ff;
-    font-size: 36px;
+    font-size: 32px;
     font-family: 'yjsz';
     text-align: center;
     margin: 0 20px 0 0;
@@ -370,3 +372,29 @@ html, body, form{overflow-y:auto;height:100%;}
     filter: drop-shadow(0 0 6px #20dbfd);
 }
 
+/* 信息面板样式 */
+.record_box {
+    gap: 0;
+    display: flex;
+    flex-direction: column;
+    height: 40%;
+    min-height: 40%;
+    margin-bottom: 0;
+}
+.record-panel {
+    margin: 4px 0;
+    width: 100%;
+    background: rgba(16, 54, 87, 0.64);
+    padding: 4px 6px;
+    border-radius: 4px;
+    backdrop-filter: blur(8px);
+    border: 1px solid #1380bd;
+}
+.record-panel p {
+    color: #fff;
+    font-size: 4px;
+}
+.record-panel.no-selection {
+    font-style: italic;
+    color: #7f8c8d;
+}
