--- a/ui/css/visual.css
+++ b/ui/css/visual.css
@@ -155,7 +155,7 @@ html, body, form{overflow-y:auto;height:100%;}
 }
 .visual_rightCon_box h3 {
     color: #fff;
-    font-size: 2px;
+    font-size: 16px;
     padding: 8px 0 0 20px; /* 与visual_conTop_box一致 */
     margin: 0;
 }
@@ -372,17 +372,18 @@ html, body, form{overflow-y:auto;height:100%;}
     filter: drop-shadow(0 0 6px #20dbfd);
 }
 
-/* 信息面板样式 */
+/* 记录面板样式 */
 .record_box {
     gap: 0;
     display: flex;
     flex-direction: column;
-    /* height: 40%; */
+    height: 100%;
     min-height: 40%;
     margin-bottom: 0;
 }
 .record-panel {
     margin-bottom: 2px;
+    height: 20%;
     width: 100%;
     background: rgba(16, 54, 87, 0.64);
     padding: 0px 6px;
@@ -392,7 +393,7 @@ html, body, form{overflow-y:auto;height:100%;}
 }
 .record-panel p {
     color: #fff;
-    font-size: 2px;
+    font-size: 18px;
 }
 .record-panel.no-selection {
     font-style: italic;
