新增 - GetAvgSOCPerDistancePayloadStats统计，年/月/日的总电能除以总距离除以总载重； 修改 - GetSOCUsageStats统计净电能；前端显示增加单位距离单位载重耗电统计模块；前后端修改同步

--- a/ui/css/visual.css
+++ b/ui/css/visual.css
@@ -509,9 +509,13 @@ html, body, form{overflow-y:auto;height:100%;}
 
 /* 统计模块头部布局 */
 .stat-box {
-    position: relative;
-    margin-bottom: 12px;
+    height:25%;
+    gap: 6px;
 }
+.stat-box .visual_title{position:relative;height:35px;margin:5px 0;}
+.stat-box .visual_title span{color:#fff;font-size:18px;line-height:35px;}
+.stat-box .visual_title img{width:100%;position:absolute;left:0;bottom:0;}
+.stat-box .visual_chart{height:calc(100% - 35px);}
 .stat-header {
     display: flex;
     align-items: center;
